# Mofumofu

./: README.md
mofumofu-server/crates/e2e/: Cargo.toml
mofumofu-server/crates/e2e/src/: lib.rs
mofumofu-server/crates/e2e/src/fixtures/: api_client.rs  containers.rs  mod.rs  test_server.rs
mofumofu-server/crates/e2e/src/helpers/: mod.rs  posts.rs  users.rs
mofumofu-server/crates/e2e/tests/: health.rs  user.rs
mofumofu-server/crates/e2e/tests/user/: create.rs
mofumofu-server/crates/mofumofu-dto/: Cargo.toml
mofumofu-server/crates/mofumofu-dto/src/: lib.rs
mofumofu-server/crates/mofumofu-dto/src/action_logs/request/: get_action_logs.rs  stream_actions.rs
mofumofu-server/crates/mofumofu-dto/src/action_logs/response/: action_log.rs  action_log_list.rs
mofumofu-server/crates/mofumofu-dto/src/auth/request/: change_email.rs  change_password.rs  confirm_email_change.rs  forgot_password.rs  login.rs  mod.rs  reset_password.rs  (+1 more)
mofumofu-server/crates/mofumofu-dto/src/comments/: mod.rs
mofumofu-server/crates/mofumofu-dto/src/drafts/: mod.rs
mofumofu-server/crates/mofumofu-dto/src/follows/: mod.rs
mofumofu-server/crates/mofumofu-dto/src/hashtags/: mod.rs
mofumofu-server/crates/mofumofu-dto/src/likes/: mod.rs
mofumofu-server/crates/mofumofu-dto/src/moderation_logs/: mod.rs
mofumofu-server/crates/mofumofu-dto/src/posts/: mod.rs
mofumofu-server/crates/mofumofu-dto/src/reports/: mod.rs
mofumofu-server/crates/mofumofu-dto/src/search/: mod.rs
mofumofu-server/crates/mofumofu-dto/src/user/: mod.rs
mofumofu-server/crates/mofumofu-dto/src/user_bans/: mod.rs
mofumofu-server/crates/mofumofu-dto/src/user_roles/: mod.rs
mofumofu-server/crates/mofumofu-dto/src/validator/: json_validator.rs  mod.rs  multipart_validator.rs  path_validator.rs  query_validator.rs  string_validator.rs
mofumofu-server/crates/mofumofu-entity/: Cargo.toml
mofumofu-server/crates/mofumofu-entity/src/: action_logs.rs  comment_likes.rs  comments.rs  common.rs  drafts.rs  follows.rs  hashtags.rs  lib.rs  likes.rs  moderation_logs.rs  notification_action_preferences.rs  notification_deliveries.rs  notification_events.rs  notification_preferences.rs  post_hashtags.rs  post_likes.rs  posts.rs  reports.rs  user_bans.rs  user_notifications.rs  user_oauth_connections.rs  user_roles.rs  users.rs
mofumofu-server/crates/mofumofu-entity/src/common/: like_target_type.rs  mod.rs  oauth_provider.rs  post_status.rs  user_role.rs
mofumofu-server/crates/mofumofu-errors/: Cargo.toml
mofumofu-server/crates/mofumofu-errors/src/: errors.rs  lib.rs  protocol.rs
mofumofu-server/crates/mofumofu-errors/src/handlers/: comment_handler.rs  draft_handler.rs  email_handler.rs  eventstream_handler.rs  file_handler.rs  follow_handler.rs  general_handler.rs  like_handler.rs  markdown_handler.rs  meilisearch_handler.rs  mod.rs  oauth_handler.rs  password_handler.rs  post_handler.rs  rate_limit_handler.rs  report_handler.rs  session_handler.rs  system_handler.rs  token_handler.rs  totp_handler.rs  user_handler.rs  worker_handler.rs
mofumofu-server/crates/mofumofu-server/: Cargo.toml
mofumofu-server/crates/mofumofu-server/src/: lib.rs  main.rs  state.rs
mofumofu-server/crates/mofumofu-server/src/api/: openapi.rs  routes.rs
mofumofu-server/crates/mofumofu-server/src/bridge/: markdown_client.rs  mod.rs  turnstile_client.rs
mofumofu-server/crates/mofumofu-server/src/connection/: database_conn.rs  http_conn.rs  meilisearch_conn.rs  mod.rs  r2_conn.rs  seaweedfs_conn.rs
mofumofu-server/crates/mofumofu-server/src/eventstream/: publisher.rs  subscriber.rs
mofumofu-server/crates/mofumofu-server/src/extractors/: session.rs  turnstile.rs
mofumofu-server/crates/mofumofu-server/src/middleware/: anonymous_user.rs  cors.rs  rate_limit.rs
mofumofu-server/crates/mofumofu-server/src/repository/: mod.rs
mofumofu-server/crates/mofumofu-server/src/service/: mod.rs
mofumofu-server/crates/mofumofu-server/src/utils/: diff.rs  mod.rs  r2_url.rs  redis_cache.rs  redis_keys.rs  session_helper.rs
(+753 files in other folders)
