ckage]
name = "mofumofu_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "mofumofu_server"

[lib]
name = "mofumofu_server"
path = "src/lib.rs"

[[bin]]
name = "mofumofu_server"
path = "src/main.rs"

[dependencies]
# Internal crates
mofumofu_config.workspace = true
mofumofu_constants.workspace = true
mofumofu_dto.workspace = true
mofumofu_entity.workspace = true
mofumofu_errors.workspace = true
mofumofu_worker.workspace = true

# External dependencies
tower.workspace = true
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower-http.workspace = true
tower-cookies.workspace = true
serde.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
redis.workspace = true
argon2.workspace = true
oauth2.workspace = true
totp-rs.workspace = true
cookie.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
meilisearch-sdk.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
reqwest.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
dotenvy.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
image.workspace = true
infer.workspace = true
blake3.workspace = true
zstd.workspace = true
futures.workspace = true
similar.workspace = true
async-nats.workspace = true
tokio-stream.workspace = true
